# DiskMBR

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README.md  configure  configure.ac
src/: Makefile.am  diskmbr.c  diskmbr.h  get_info.c  get_partitions.c  get_partitions.h  print_info.c  print_info.h  read_mbr.c  read_mbr.h
test/: Makefile.am  test_get_info.c  test_get_partitions.c  test_print_info.c  test_read_mbr.c
