AC_INIT([diskmbr], [1.0], [robertwarmka@gmail.com])
AM_PROG_AR
LT_INIT
AM_INIT_AUTOMAKE([foreign -Wall -Werror subdir-objects])
AC_PROG_CC
AC_CONFIG_MACRO_DIRS([m4])
AC_STDC_HEADERS
AC_HAVE_HEADERS(string.h fcntl.h sys/types.h unistd.h errno.h)
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile test/Makefile])
AC_OUTPUT
